Further text brush-up

--- a/2024-01-08-order-and-structure.org
+++ b/2024-01-08-order-and-structure.org
@@ -78,139 +78,205 @@ quadrant one is just the bare minimum.
 
 * Truth About Quadrant One
 
+Quadrant one is where you go put out fires, but if you're constantly
+holding the fire extinguisher. When do you actually hold the hammer.
+Furthermore guess where the fires of quadrant one come from. They
+ignored dreams of quadrant two, they sprout out from the ground and
+come to haunt you like a psycho ex-girlfriend.
 
-Quadrant one is where you go put out fires but if you're constantly
-holding the fire extinguisher when do you actually hold the hammer
-furthermore guess where the fires of quadrant one come from they
-ignored dreams of quadrant 2 they sprout out from the ground and come
-to haunt you like a psycho ex-girlfriend you see examples of this all
-the time ignore that big project and read the consequences when it's
-due ignore quality time with your friend friends and family and they
-soon become descent strangers ignore the gym long enough and you'll
-wake up one day with a heart attack quadrant 2 is the magical fabled
-land where dreams are built you know the stuff that's good for you but
-because it's not urgent you never make time for
+You see examples of this all the time:
+
+- Ignore that big project and read the consequences when it's due;
+- Ignore quality time with your friends and family and they soon
+  become descent strangers;
+- Ignore the gym long enough and you'll wake up one day with a heart
+  attack.
+
+#+begin_quote
+Quadrant two is the /magical fabled land/ where dreams are built.
+#+end_quote
+
+You know the stuff that's good for you but because it's not urgent you
+never make time for it.
 
 
-* BOX FACTORY ANALOGY
-imagine yourself as a box Factory a day's worth of work is 50 boxes
-buto tomorrow the boss says he needs 100 boxes uhoh sounds important
-and Urgent right you don't want to get fired so you grit your teeth
-and force it to happen from simple to-dos phone reminder systems to
-micromanaged hour by hour planners your mindset is always the same
-learn another productivity hack to squeeze more juice from each day
-what if instead of being a better worker you became a better Factory
-instead of just putting out fires every day you spend one day to make
-everything fireproof and thus free up the rest of your life this is
-what I call the factory Boss versus factory worker mentality don't get
-lost in the weeds strategize at a higher level live your life in
-quadrant 2 easier said than done I know quadrant 2 tasks are always
-foggy and unclear there's no satisfying finish no urgency and no end
-in sight you can always read more learn more work out more and without
-inspiration pushing you forward your brain is hardwired to only do
-things with immediate rewards things that feel good as chaotic as
-quadrant 1 is it does indeed feel good checking off Tod do and putting
-out fires gives you an immediate sense of accomplishment and thus back
-to assembling the boxes you go this is the inherent problem the four
-quadrant model gives you the conceptual framework but it's not
-practical instead of fighting your brain's need for feel-good
-productivity build a system that capitalizes on it this is the Crux
+* Box Factory Analogy
 
-* STEP 1: THE SECRET QUADRANT
-of technique number one creating the magical quadrant of 1.5 the
-secret quadrant of success 1.5 is quadrant 2's twin brother except
-much sexier everything in it is systematically broken down into task
-that are not only actionable practical and urgent but most importantly
-of all carefully picked to get the highest yield for your time to
-create quadrant 1.5 you first build the BUILD THE CLOUD cloud the
-cloud represents your ultimate dream it hangs in the sky thousands of
-feet in the air all fluffy and nice while you admire this cloud from
-afar it taunts you with its tiny little raindrops theoretically as
-long as you follow these drops all the way up you'll reach it most
-people's plans are to do exactly this follow the drops from the ground
-up with checklists to-dos organizers just good enough to collect the
-lowest hanging fruit the few droplets right above your head you can
-touch and see the problem is the higher you go the more difficult it
-becomes how do you know if you're chasing the right Cloud anymore
-instead do a top down approach you start with the top of the cloud
-where the raindrops are incredibly obvious and fat you follow them
-down as they Splinter seeing exactly what actions should be
-prioritized this is called building the blueprint let's say your dream
-cloud is medical school studying the cloud you see it's actually four
-key Parts grades medical extracurriculars a killer essay and an
-amazing interview the interview Cloud further splinters into two key
-Parts delivery and substance to deliver your message well you need
-Charisma a confident voice and of course a sexy outfit we could do an
-entire series on Charisma alone so I won't go any further here but the
-point is to keep following these clouds all the way down until you're
-literally at the level of individual raindrops done right you
-systematically understand everything you need to focus on or
-prioritize expose all your blind spots and weaknesses and gain the
-ability to course correct in real time when I was trying to get into
-Harvard I remember doing this exact analysis every week how's my GPA
-Cloud doing my extracurricular cloud my letters of recommendation
-cloud and all its tiny mini clouds and raindrops underneath I was a
-pilot and these were the gauges and flight instruments in my cockpit
-they were would tell me if I was on track without it I would have been
-Flying Blind once you have this blueprint mapped out you begin to
-schedule your life around weekly goals the Crux of technique number
-two all
+Imagine yourself as a =box factory=. A day's worth of work is 50
+boxes, but tomorrow the boss says he needs 100 boxes. Uh oh, sounds
+/important and urgent/.
 
-* STEP 2: SMALLEST UNIT OF TIME
-goals have a onewe deadline this is how you build urgency to
-everything in quadrant 1.5 1 month is conceptually too long knowing
-you have an entire month to accomplish something kills any sense of
-urgency and is too late for feedback having only 12 times a year to
-course correct is not good enough on the other hand one day is too
-short it creates anxiety and the desire to excessively micromanage
-hence the weekly deadline for all assigned tasks just long enough for
-Meaningful work but flexible enough for you to still handle the rest
-of your life for example let's say you have a medical interview in 1
-month how would the weekly goal system work first week three goals
-doesn't matter when you do it how you do it you just have to do it and
-oh yeah you only again have one week first goal is to watch five
-videos on Charisma second goal is to analyze Five actors being
-interviewed pretend they are your clients and you are their public
-relations manager pretend they are paying you a crap ton of money for
-good feedback so make sure you know your stuff third goal is to
-interview yourself in front of a mirror after an hour of this do it
-again but this time record it watch it and give yourself feedback
-second week you have two goals first is to come up with a list of life
-stories and experiences you can sprinkle into your interviews to show
-why you are awesome you want these stories to be interesting so they
-for sure will remember you second goal is to prepare for gotcha
-questions some smart ass is definitely going to ask you about your top
-three weaknesses what you regret most maybe what your spirit vegetable
-is or some stupid thing like that you want to have thought about some
-of these beforehand so you don't freeze in the moment week three is
-mock interview time schedule 10 of them with people that you trust and
-make it as difficult as possible give them a list of Hardball
-questions and ask them for real feedback week four figure out as much
-stuff about the inter interview in advance where it is who it is what
-makes them tick read their articles understand their field of interest
-if their hobby is rescuing abandoned puppies go Rescue an abandoned
-puppy so you can relate if you've noticed the mini goals for each week
-are all actionable steps these weekly goals are never outcome based
-like get 100 new subscribers or get an A on the exam but rather
-something always within your control now that each week's plan is set
-how do you decide what to do each day technique number three the
-inverted
+Right you don't want to get fired, so, - you grit your teeth and force
+it to happen. From simple to-dos phone reminder systems to
+micromanaged hour by hour planners your mindset is always the same.
 
-* STEP 3: INVERTED PYRAMID METHOD
-period method I've talked about this before in a previous video
-essentially always start your day with the most important thing spend
-the most amount of time on this most important thing and less and less
-time on each subsequent task when done well this entire system works
-on autopilot each week's goals keeps you flowing forward while the
-inverted pyramid allows you to flexibly schedule the day-to-day in
-service of these goals the beauty about the system is that it self-
-corrects if I haven't made much progress on a goal becomes that much
-more urgent as the week draws to a close elegantly this urgency gets
-crystallized within the inverted pyramid too the more urgent a task
-the more likely it is to occupy the top tier of importance for the day
-this flexibility is the core feature of this system no more
-micromanaging yourself with fancy calendars or minor systems or
-detailed to-dos focus on the cloud live in
+#+begin_quote
+Learn another productivity hack to squeeze more juice from each day.
+#+end_quote
+
+What if instead of being a ~better worker~ you became a ~better
+factory~, instead of just putting out fires every day you spend one
+day to make everything fireproof and thus -- /free up the rest of your
+life/.
+
+This is what I call the ~factory Boss~ versus ~factory worker~.
+Mentality don't get lost in the weeds: strategize at a higher level -
+Live your life in quadrant two.
+
+Easier said than done. I know quadrant two tasks are always foggy and
+unclear there's no satisfying finish, no urgency and no end in sight.
+You can always read more, learn more, work out more and without
+inspiration pushing you forward.
+
+_Your brain is hardwired to only do things with immediate rewards_:
+things that feel good as chaotic as quadrant one is.
+
+
+It does indeed feel good checking off To-Do and putting out fires
+gives you an immediate sense of accomplishment and thus back to
+assembling the boxes. This is the inherent problem. The four quadrant
+model gives you the conceptual framework, but it's not practical
+instead of fighting your brain's need for feel-good productivity. Build
+a system that capitalizes on it.
+
+
+* Step One: The Secret Quadrant
+
+This is /the crux/a of technique:
+
+- number one: creating the magical quadrant of 1.5.
+
+
+The secret *quadrant of success* 1.5 is quadrant two's twin brother,
+except much sexier. Everything in it is systematically broken down
+into task that are not only actionable practical and urgent, but most
+importantly of all carefully picked to get the highest yield for your
+time.
+
+To create quadrant 1.5 /you first build the cloud/. The cloud
+represents your ultimate dream, it hangs in the sky thousands of feet
+in the air all fluffy and nice. While you admire this cloud from afar
+it taunts you with its tiny little raindrops.
+
+Theoretically, as long as you follow these drops all the way up you'll
+reach it. Most people's plans are to do exactly this: follow the drops
+from the ground up with checklists, To-Dos, organizers just good
+enough to collect the lowest hanging fruit. The few droplets right
+above your head you can touch and see the problem is.
+
+The higher you go the more difficult it becomes - how do you know if
+you're chasing the right Cloud anymore. Instead do a top down approach
+you start with the top of the cloud where the raindrops are incredibly
+obvious and fat. You follow them down as they splinter, seeing exactly
+what actions should be prioritized.
+
+#+begin_quote
+This is called ~building the blueprint~.
+#+end_quote
+
+Let's say your dream cloud is medical school studying. The cloud you
+see it's actually four key parts grades: medical extracurriculars, a
+killer essay and an amazing interview. The interview cloud further
+splinters into two key parts: delivery and substance. To deliver your
+message well you need charisma a confident voice. And, of course, - a
+sexy outfit. We could do an entire series on charisma alone, so I won't
+go any further here, but the point is to keep following these clouds
+all the way down until you're literally at the level of individual
+raindrops.
+
+Done right you systematically understand everything you need to focus
+on or prioritize, expose all your blind spots and weaknesses and gain
+the ability to course correct. In real time when I was trying to get
+into Harvard I remember doing this exact analysis every week. How's my
+GPA Cloud doing my extracurricular cloud my, letters of recommendation
+cloud and all its tiny mini clouds and raindrops underneath. I was a
+pilot and these were the gauges and flight instruments in my cockpit.
+They were would tell me if I was on track. Without it I would have been
+flying blind. Once you have this blueprint mapped out you begin to
+schedule your life around weekly goals.
+
+* Step 2: Smallest Unit of Time
+
+The ~crux~ of technique number two:
+
+#+begin_quote
+all goals have a onewe deadline
+#+end_quote
+
+This is how you build urgency to everything in quadrant 1½: one month
+is conceptually *too long*: knowing you have an entire month to
+accomplish something kills any sense of urgency and is too late for
+feedback. Having only 12 times a year to course correct is not good
+enough. On the other hand one day is *too short* - it creates anxiety
+and the desire to excessively micromanage.
+
+#+begin_quote
+Hence the weekly deadline for all assigned tasks just /long enough for
+meaningful work but flexible enough for you to still handle the rest
+of your life/.
+#+end_quote
+
+For example let's say you have a medical interview in one month: how
+would the weekly goal system work? First week three goals doesn't
+matter when you do it how you do it you just have to do it and oh yeah
+you only again have one week first goal is to watch five videos on
+Charisma. Second goal is to analyze five actors being interviewed,
+pretend they are your clients and you are their public relations
+manager.
+
+#+begin_quote
+Pretend they are paying you a crap ton of money for good feedback so
+make sure you know your stuff.
+#+end_quote
+
+Third goal is to interview yourself in front of a mirror. After an
+hour of this do it again, but this time record it. Watch it and give
+yourself feedback.
+
+Second week you have two goals: first is to come up with a list of
+life stories and experiences you can sprinkle into your interviews to
+show why you are awesome you want these stories to be interesting so
+they for sure will remember you. Second goal is to prepare for gotcha
+questions - /some smart ass/ is definitely going to ask you about your
+top three weaknesses what you regret most. Maybe what your spirit
+vegetable is or some stupid thing like that you want to have thought
+about some of these beforehand. So you don't freeze in the moment. 
+
+Week three is mock interview time schedule 10 of them with people that
+you trust and make it as difficult as possible give them a list of
+hardball questions and ask them for real feedback.
+
+Week four - figure out as much stuff about the interview in advance:
+where it is, who it is, what makes them tick, read their articles,
+understand their field of interest. If their hobby is rescuing
+abandoned puppies go rescue an abandoned puppy! So you can relate if
+you've noticed.
+
+The mini goals for each week are all actionable steps. These weekly
+goals are never outcome based, like get 100 new subscribers or get an
+'A' on the exam, but rather something always within your control.
+
+Now that each week's plan is set how do you decide what to do each
+day.
+
+
+* Step 3: Inverted Pyramid Method
+
+Technique number three: _the inverted pyramid method_. I've talked about
+this before in a previous video essentially always start your day with
+the most important thing spend the most amount of time on this most
+important thing and less and less time on each subsequent task when
+done well this entire system works on autopilot each week's goals
+keeps you flowing forward while the inverted pyramid allows you to
+flexibly schedule the day-to-day in service of these goals the beauty
+about the system is that it self- corrects if I haven't made much
+progress on a goal becomes that much more urgent as the week draws to
+a close elegantly this urgency gets crystallized within the inverted
+pyramid too the more urgent a task the more likely it is to occupy the
+top tier of importance for the day this flexibility is the core
+feature of this system no more micromanaging yourself with fancy
+calendars or minor systems or detailed to-dos focus on the cloud live
+in
 
 * SUMMARY
 quadrant 1.5 and set your weekly goals in advance wake up each day and
