Another portion of text rectifying

--- a/2024-01-08-order-and-structure.org
+++ b/2024-01-08-order-and-structure.org
@@ -262,36 +262,36 @@ day.
 
 * Step 3: Inverted Pyramid Method
 
-Technique number three: _the inverted pyramid method_. I've talked about
-this before in a previous video essentially always start your day with
-the most important thing spend the most amount of time on this most
-important thing and less and less time on each subsequent task when
-done well this entire system works on autopilot each week's goals
-keeps you flowing forward while the inverted pyramid allows you to
-flexibly schedule the day-to-day in service of these goals the beauty
-about the system is that it self- corrects if I haven't made much
-progress on a goal becomes that much more urgent as the week draws to
-a close elegantly this urgency gets crystallized within the inverted
-pyramid too the more urgent a task the more likely it is to occupy the
-top tier of importance for the day this flexibility is the core
-feature of this system no more micromanaging yourself with fancy
-calendars or minor systems or detailed to-dos focus on the cloud live
-in
+Technique number three: _the inverted pyramid method_.
 
-* SUMMARY
-quadrant 1.5 and set your weekly goals in advance wake up each day and
-spend the majority of your time doing your highest yield most
-important activity when done right you should have a clear sense of
-what to focus on for any given day and that's it rinse and repeat
-until success I hope this video was useful if so please subscribe
-comment and then go tell your friends your grandma and your pet
-hamster also I'm doing an experiment is much faster for me to write my
-thoughts than is to make videos and thus I have a whole backlog of
-material waiting to get published if you want to get early access to
-this and more then please go to my substack and consider becoming a
-paid member to support this endeavor Link in the description all right
-smile you later and once again
+I've talked about this before in a previous video essentially:
 
-* SHOUT-OUTS AND SUPER THANKS
-shout out to Keith Dow 8327 thank you so much for your super thanks
-your support is greatly appreciated thanks again man
+- /Always start your day with the most important thing/;
+- /Spend the most amount of time on this most important thing and less
+  and less time on each subsequent task/.
+
+When done well this entire system works on autopilot. Each week's
+goals keeps you flowing forward, while the =inverted pyramid= allows
+you to flexibly schedule the day-to-day in service of these goals. The
+beauty about the system is that it self-correct: if I haven't made
+much progress on a goal becomes that much more urgent as the week
+draws to a close.
+
+Elegantly this urgency gets crystallized within the inverted pyramid
+too: the more urgent a task, - the more likely it is to occupy the top
+tier of importance for the day. This flexibility is the core feature
+of this system. +No more micromanaging yourself+ with fancy calendars
+or minor systems or detailed To-Dos.
+
+#+begin_quote
+Focus on the cloud live in quadrant 1½ and set your weekly goals in
+advance.
+#+end_quote
+
+
+* *Summary*
+
+Wake up each day and spend the majority of your time doing your
+_highest yield most important activity_. When done right you should
+have a clear sense of what to focus on for any given day and that's it
+rinse and repeat until success.
