A couple of postponed (obsolete) tasks

--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -107,8 +107,8 @@ Separate set of bookmarks for each task
 
 * Average modes
 
-** LAG Task management
-SCHEDULED: <2024-01-08 Mon .+4d/5d>
+** RETARD Task management
+SCHEDULED: <2024-04-08 Mon .+4d/5d>
 :PROPERTIES:
 :LAST_REPEAT: [2022-12-03 Sat 09:27]
 :CATEGORY: Manage
@@ -227,8 +227,8 @@ So, the common types of notes would be:
 ** LAG Data elaboration
 SCHEDULED: <2024-04-05 Fri>
 
-** LAG [#B] Meta-analysys
-SCHEDULED: <2024-01-05 Fri .+1w>
+** RETARD [#B] Meta-analysys
+SCHEDULED: <2024-04-26 Fri .+1w>
 :PROPERTIES:
 :CATEGORY: Meta
 :END:
