--- a/2024-02-27-debian-12-emacs.org
+++ b/2024-02-27-debian-12-emacs.org
@@ -28,7 +28,9 @@ The file which executes by each instance of ~Emacs~ allocated at
 * Elpa-*.deb packages
 
 They are native for ~Debian~ and it might be secure to use them
-instead the third-part =ELPA/MELPA=.
+instead the third-part =ELPA/MELPA=. Of course all they are
+system-wide, and it is easy to include it in the user's config by
+=(require 'package-name)= operator.
 
 #+begin_src sh :results output :exports both
 apt-cache search elpa 2>&1
@@ -463,6 +465,67 @@ elpa-zzz-to-char - fancy version of `zap-to-char' command
 
 By default all they are installed into
 =/usr/share/emacs/site-lisp/elpa=
+
+
+* System-wide additional packages
+
+There are a plethora packages, provided by third-parties and not
+included into the official ~Debian~ release. They can be allocated in
+any folder in =load-path=, for this particular case in
+=/usr/local/share/emacs/site-lisp=:
+
+#+begin_src sh :results output :exports both
+ls /usr/local/share/emacs/site-lisp 2>&1
+#+end_src
+
+#+RESULTS:
+#+begin_example
+bookmark-plus
+custom
+elpy
+ereader
+google-translate
+key-chord-0.7
+kv-0.0.5
+linkmarks
+mw-thesaurus
+nov.el
+org-bullets-0.2.4
+org-drill-2.7.0
+powerthesaurus-0.4.0
+speed-type-1.3
+voca-builder-0.2.0
+#+end_example
+
+All them are in the default ~Emacs'~ =load-path= and accesible for
+each user, but it's necessary to /add every package's folder/ into the
+pesonal load path. It might be defined manually, folder by folder, but
+here is the hack how to add all folders to =load-path= at once:
+
+#+begin_src elisp
+;; add all subdirs from the host's =site-lisp= to ~load-path~
+(let* ((my-lisp-dir "/usr/local/share/emacs/site-lisp/")
+       (default-directory my-lisp-dir)
+       (orig-load-path load-path))
+  (setq load-path (cons my-lisp-dir nil))
+  (normal-top-level-add-subdirs-to-load-path)
+  (nconc load-path orig-load-path))
+#+end_src
+
+*NOTE* =load-path= modificates only at ~Emacs~ initiation, so you're
+ need to restart your favourite editor.
+
+ 
+* System-wide ~Emacs~ settings
+
+In several cases it is reasonable to put a large hunk of some
+configuration into a separate fine and include it into main user's
+config =~/.emacs= in a single string:
+
+#+begin_src elisp
+(load "/usr/local/share/emacs/site-lisp/custom/<name_of_conf_hunk.el>")
+#+end_src
+
 
 * Per-user settings
 
